Align PyLucene integration with Lucene 10.2
Signed-off-by: Zack Meeks <zmeeks@nvidia.com>