@@ -10,8 +10,12 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
 
-import java.util.Set;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.concurrent.TimeUnit;
 import org.apache.lucene.codecs.Codec;
+import org.apache.lucene.codecs.KnnVectorsFormat;
 import org.apache.lucene.codecs.hnsw.FlatVectorsFormat;
 import org.junit.Test;
 
@@ -62,6 +66,16 @@ public class TestBackCompat {
             16, 100));
   }
 
+  @Test
+  public void testProviderSupportsLucene99ScalarFormats() throws Exception {
+    LuceneProvider lucene99Provider =
+        LuceneProvider.getInstance(LuceneProvider.LUCENE_99_FORMAT_VERSION);
+    assertNotNull(lucene99Provider.getLuceneScalarQuantizedVectorsFormatInstance());
+    KnnVectorsFormat hnswScalarFormat =
+        lucene99Provider.getLuceneHnswScalarQuantizedKnnVectorsFormatInstance(16, 100);
+    assertTrue(hnswScalarFormat.toString().contains("maxConn=16, beamWidth=100"));
+  }
+
   @Test(expected = UnsupportedOperationException.class)
   @SuppressWarnings("deprecation")
   public void testLegacyHnswBinaryFormatDescriptorIsRetained() throws Exception {
@@ -69,12 +83,19 @@ public class TestBackCompat {
         .getLuceneHnswBinaryQuantizedVectorsFormatInstance(16, 100);
   }
 
+  @Test(expected = UnsupportedOperationException.class)
+  @SuppressWarnings("deprecation")
+  public void testLegacyHnswScalarFormatDescriptorIsRetained() throws Exception {
+    LuceneProvider.getInstance(LuceneProvider.LUCENE_99_FORMAT_VERSION)
+        .getLuceneHnswScalarQuantizedVectorsFormatInstance(100, 16);
+  }
+
   @Test
-  public void testDefaultDelegateCodec() {
-    Codec delegate = LuceneProvider.getDefaultDelegateCodec();
-    assertNotNull(delegate);
-    assertTrue(Set.of("Lucene101", "Lucene99").contains(delegate.getName()));
-    assertTrue(delegate.getClass().getName().startsWith("org.apache.lucene."));
+  public void testLucene101DelegateCodec() throws Exception {
+    Codec delegate = LuceneProvider.getCodec("101");
+    assertEquals("Lucene101", delegate.getName());
+    assertEquals(
+        "org.apache.lucene.codecs.lucene101.Lucene101Codec", delegate.getClass().getName());
   }
 
   @Test
@@ -88,6 +109,55 @@ public class TestBackCompat {
     for (String codecName : codecNames) {
       assertTrue(Codec.availableCodecs().contains(codecName));
       assertEquals(codecName, Codec.forName(codecName).getName());
+    }
+  }
+
+  @Test
+  public void testCodecSPIColdStart() throws Exception {
+    runColdStartProbe("codec");
+  }
+
+  @Test
+  public void testKnnVectorsFormatSPIColdStart() throws Exception {
+    runColdStartProbe("knn");
+  }
+
+  @Test
+  public void testScalarFormatConstructionIsLazy() throws Exception {
+    runColdStartProbe("scalar-constructor");
+  }
+
+  private static void runColdStartProbe(String mode) throws Exception {
+    String javaExecutable =
+        Path.of(System.getProperty("java.home"), "bin", "java").toAbsolutePath().toString();
+    String testClassPath =
+        System.getProperty("surefire.test.class.path", System.getProperty("java.class.path"));
+    Path outputFile = Files.createTempFile("cuvs-lucene-spi-" + mode + "-", ".log");
+    try {
+      Process process =
+          new ProcessBuilder(
+                  javaExecutable,
+                  "--add-modules=jdk.incubator.vector",
+                  "--enable-native-access=ALL-UNNAMED",
+                  "-cp",
+                  testClassPath,
+                  SPIColdStartProbe.class.getName(),
+                  mode)
+              .redirectErrorStream(true)
+              .redirectOutput(outputFile.toFile())
+              .start();
+
+      boolean completed = process.waitFor(30, TimeUnit.SECONDS);
+      if (!completed) {
+        process.destroyForcibly();
+        process.waitFor(5, TimeUnit.SECONDS);
+        throw new AssertionError("Timed out waiting for " + mode + " SPI cold-start probe");
+      }
+
+      String output = Files.readString(outputFile, StandardCharsets.UTF_8);
+      assertEquals("Cold-start probe output:\n" + output, 0, process.exitValue());
+    } finally {
+      Files.deleteIfExists(outputFile);
     }
   }
 }
